# Personal-Blog

./: .gitignore  README.md  netlify.toml  new_article.py  pelicanconf.py  publishconf.py  pyproject.toml  tasks.py
content/: 2020-03-14-new-blog.md  2020-07-31-development-setup-on-windows-10.md  2021-04-14-powershell-for-the-unix-masses.md  2021-07-16-getting-started-with-the-esp-idf-running-under-wsl2.md  2022-08-25-pelican-netlify.md  2024-04-30-getting-started-with-ruff-and-poetry.md  2024-05-10-invoke-pyinvoke-is-great.md
content/pages/: about.md  cv.md
