[tool.poetry]
name = "pelican-blog"
version = "0.1.0"
description = ""
authors = ["Andres Arias <andres.arias12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pelican = {extras = ["markdown"], version = "^4.8.0"}
ipython = "^8.4.0"
pelican-liquid-tags = "^1.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
